infrastructure/kubernetes/base/sso-api.service.yml
apiVersion: v1
kind: Service
metadata: { name: sso-api }
spec: { selector: { app: sso-api }, ports: [{ port: 80, targetPort: 3000 }] }
